ading data cleaning file and scan file

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,4 +1,9 @@
-.PHONY: all 
+.PHONY: all
 
 all:
 	julia download-data.jl
+	Rscript clean-spleen-data.R
+	Rscript clean-hippo-data.R
+
+rscan:
+	Rscript 
