adding some code to make r scan code generate preproceed geno and pheno data

--- a/code/Makefile
+++ b/code/Makefile
@@ -12,23 +12,22 @@ cleandata:
 	Rscript clean-spleen-data.R
 	# Rscript clean-hippo-data.R
 
-calc_genoprob:
-	Rscript calc_genoprob.R
+# calc_genoprob:
+# 	Rscript calc_genoprob.R
 
-remove_missing_pheno:
-	Rscript remove_spleen_pheno.R
-	# Rscript remove_hippo_pheno.R 
+# remove_missing_pheno:
+# 	Rscript remove_spleen_pheno.R
+# 	# Rscript remove_hippo_pheno.R 
 
 rscan:
+	# running the scan will also generate geno prob and pheno no missing data file. 
 	Rscript Rqtl2scan_spleen.R
 	# Rscript Rqtl2scan_hippo.R
 
-# gemmascan:
-
+#TODO:
 # juliascan:
-
-
+	run_lmgpu.sh
 # compare:
-
+	julia check_results.jl
 # gemm:
-
+	julia gemm_test.jl
