adding script to get gmap for bxd

--- a/code/Makefile
+++ b/code/Makefile
@@ -5,6 +5,9 @@ all: getdata installrlib cleandata rscan #compare
 getdata:
 	julia download-data.jl
 
+getgmap:
+	julia getgmap.jl
+	
 installrlib:
 	Rscript rlibdep.R
 
@@ -13,7 +16,7 @@ cleandata:
 	# Rscript clean-hippo-data.R
 
 # calc_genoprob:
-# 	Rscript calc_genoprob.R
+# 	Rscript calcgenoprob.R
 
 # remove_missing_pheno:
 # 	Rscript remove_spleen_pheno.R
@@ -24,7 +27,7 @@ rscan:
 	Rscript Rqtl2scan_spleen.R
 	# Rscript Rqtl2scan_hippo.R
 
-#TODO:
+# TODO:
 # juliascan:
 	run_lmgpu.sh
 # compare:
