--- a/code/Makefile
+++ b/code/Makefile
@@ -12,16 +12,18 @@ installlib:
 	Rscript rlibdep.R
 	julia juliadep.jl
 
+#TODO: install CUDA 
+
 cleandata:
 	Rscript clean-spleen-data.R
-	# Rscript clean-hippo-data.R
+	# Rscript clean-hippo-data.R # TODO: running this job on Bluff. Check on this later. 
 
 calc_genoprob:
 	Rscript calcgenoprob.R
 
-remove_missing_pheno:
-	Rscript remove_spleen_pheno.R
-# 	# Rscript remove_hippo_pheno.R 
+# remove_missing_pheno:
+# 	Rscript remove_spleen_pheno.R
+# # 	# Rscript remove_hippo_pheno.R 
 
 rscan:
 	# running the scan will also generate geno prob and pheno no missing data file. 
@@ -31,7 +33,7 @@ rscan:
 # TODO:
 juliascan:
 	julia julia-genomescan.jl
-# compare:
+compare:
 	julia check_results.jl
 # gemm: # TODO: wait until have access to acf. 
 # 	julia gemm_test.jl
