dynamically change data type

--- a/code/Makefile
+++ b/code/Makefile
@@ -32,7 +32,8 @@ rscan:
 
 # TODO:
 juliascan:
-	julia julia-genomescan.jl
+	julia julia-genomescan.jl 
+	 # runs abount 2 seconds for max lod and float64 on my home imac 
 compare:
 	julia check_results.jl
 # gemm: # TODO: wait until have access to acf. 
