working after pulling in changes, but one of the result does not agree in RQTL and Julia

--- a/code/Makefile
+++ b/code/Makefile
@@ -35,7 +35,7 @@ rscan:
 
 # TODO: test GPU implementation 
 juliascan:
-	julia julia-genomescan.jl 
+	JULIA_NUM_THREADS=16 julia julia-genomescan.jl 
 	 # runs abount 2 seconds for max lod and float64 on my home imac 
 compare:
 	julia check_results.jl
