moved get data code to after installing dependency packages

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,12 +1,14 @@
-all: getdata installlib cleandata rscan juliascan compare
-.PHONY: all
+all: installlib getdata cleandata rscan juliascan compare 
+nogpu: installlib getdata cleandata rscan juliascan gpuscan compare gemm
 
-getdata:
-	julia download-data.jl
+.PHONY: all
 
 installlib:
 	Rscript rlibdep.R
 	julia juliadep.jl
+
+getdata:
+	julia download-data.jl
 
 cleandata:
 	Rscript clean-data.R
@@ -17,7 +19,9 @@ rscan:
 
 juliascan:
 	JULIA_NUM_THREADS=16 julia julia_genome_scan.jl 
-	 # runs abount 2 seconds  for max lod and float64 on my home imac 
+	# runs abount 2 seconds  for max lod and float64 on my home imac 
+gpuscan: 
+	JULIA_NUM_THREADS=16 julia julia_genome_scan_gpu.jl 
 compare:
 	julia check_results.jl
 gemm: 
