adding script to load plink genotype

--- a/code/tensorqtl/Makefile
+++ b/code/tensorqtl/Makefile
@@ -12,11 +12,14 @@ download_data:
 unzip_pheno:
 	gunzip -c ../../data/tensorqtldata/GEUVADIS.445_samples.expression.bed.gz > ../../data/tensorqtldata/GEUVADIS.445_samples.expression.bed
 
-plink2csv:
-	# download plink software
-	# wget http://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20201019.zip  --no-check-certificate
-	# unzip plink*
-	./plink --bfile ../../data/tensorqtldata/GEUVADIS.445_samples.GRCh38.20170504.maf01.filtered.nodup --recode --out ../../data/tensorqtldata/genotypetest
+# plink2csv:
+# 	# download plink software
+# 	# wget http://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20201019.zip  --no-check-certificate
+# 	# unzip plink*
+# 	./plink --bfile ../../data/tensorqtldata/GEUVADIS.445_samples.GRCh38.20170504.maf01.filtered.nodup --recode --out ../../data/tensorqtldata/genotype
+extractgeno: 
+	python extractgeno.py
+	
 clean_data: 
 	Rscript clean_data.Rscript
 
