write out result

--- a/code/tensorqtl/Makefile
+++ b/code/tensorqtl/Makefile
@@ -27,7 +27,7 @@ setupvenv:
 activatevenv: 
 	cd tensorqtl/
 	source venv/bin/activate 
-	pip install -r install/requirements.txt .
+	# pip install -r install/requirements.txt .
 
 extractgeno: 
 	python extractgeno.py
