results finally agree with tensorqtl, but only on the first column

--- a/code/tensorqtl/Makefile
+++ b/code/tensorqtl/Makefile
@@ -19,15 +19,16 @@ unzip_pheno:
 # 	./plink --bfile ../../data/tensorqtldata/GEUVADIS.445_samples.GRCh38.20170504.maf01.filtered.nodup --recode --out ../../data/tensorqtldata/genotype
 setupvenv:
 	git clone https://github.com/broadinstitute/tensorqtl
-	cd tensorqtl/
-	virtualenv venv 
-	source venv/bin/activate 
-	pip install -r install/requirements.txt .
+	cd tensorqtl/ && \
+	git checkout 1760a34 && \
+	virtualenv venv && \
+	source venv/bin/activate && \
+	pip install -r install/requirements.txt . && \
+	pip install torch==1.7.1+cu101 torchvision==0.8.2+cu101 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html 
 
 activatevenv: 
-	cd tensorqtl/
-	source venv/bin/activate 
-	# pip install -r install/requirements.txt .
+	cd tensorqtl/; \
+	source venv/bin/activate
 
 extractgeno: 
 	python extractgeno.py
