Code that: 1. testing liteqtl and tensorqtl with fake data. 2 testing performance with small dataset (only 5000 markers).

--- a/code/tensorqtl/Makefile
+++ b/code/tensorqtl/Makefile
@@ -35,6 +35,12 @@ extractgeno:
 	
 clean_data: 
 	Rscript clean_data.R
+
+compare_result_with_tensorqtl:
+	python small-data-test-tensorqtl.py 
+	julia small-data-test-liteqtl.jl 
+	julia compareResult.jl 
+
 time_tensorqtl:
 	# & means send the process to background
 	#sh ./stay/get_it_ios.sh &  PIDIOS=$!
